--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
 		</style>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<title>Henc </title>
 		<link rel="stylesheet" href="css/bootstrap.min.css" />
 		<link rel="stylesheet" href="css/bootstrap-theme.min.css" />
 		<link rel="stylesheet" href="css/bootstrap.css" />
 		<link rel="stylesheet" href="css/mystyle.css" />
+ 		<script>window.location.replace('http://hencworkshop.com');</script>
 	</head>
 	
 	<body>
